# orb-ygz-slam-ros

./: KeyFrameTrajectory.txt  README.md  build_ros.sh  generate.sh  main().xmind  orbvio.xmind  run.sh
Examples/Monocular/: EuRoC.yaml  jpeuroc.yaml  mono_euroc  mono_euroc_vins  mono_kitti  mono_tum
Examples/RGB-D/: rgbd_tum
Examples/Stereo/: stereo_euroc  stereo_kitti
ROS/ORB_YGZ_SLAM/: CMakeLists.txt  EuRoC.yaml  KeyFrameTrajectory.txt  MonoIMU  jpeuroc.yaml  manifest.xml  optorROS.yaml
ROS/ORB_YGZ_SLAM/src/: MonoIMU.cc
ROS/ORB_YGZ_VIO/: CMakeLists.txt  manifest.xml
ROS/ORB_YGZ_VIO/launch/: testeuroc.launch
ROS/ORB_YGZ_VIO/src/: ros_vio.cc
ROS/ORB_YGZ_VIO/src/MsgSync/: MsgSynchronizer.cpp
config/: IDS.yaml  euroc.yaml  optorROS.yaml
src/: Frame.cc  System.cc  Tracking.cc
